packages/css/src/formElements/input/input.css
.md-input__outer-wrapper {
  font-family: var(--md-typography-family-body);
  font-size: var(--md-typography-size-16);
}

.md-input {
  padding: 0.6875rem var(--md-size-32) 0.6875rem var(--md-size-16);
  max-width: 100%;
  width: 100%;
  background-color: var(--md-color-surface-primary);
  border-radius: var(--md-size-4);
  border: var(--md-size-1) solid var(--md-color-border-primary);
  margin: var(--md-size-1);
  color: var(--mdGreyColor);
  font-size: var(--md-typography-size-16);
  line-height: 150%;
  box-sizing: border-box;
}

.md-input--small {
  padding: 0.4375rem var(--md-size-32) 0.4375rem var(--md-size-16);
}

.md-input--large {
  padding: 0.9375rem var(--md-size-32) 0.9375rem var(--md-size-16);
}

.md-input:not(.md-input.md-input--readonly):not(.md-input.md-input--disabled):active,
.md-input:not(.md-input.md-input--readonly):not(.md-input.md-input--disabled):focus-visible {
  outline: 2px solid var(--md-color-cta-primary-default);
  outline-offset: -2px;
  border-color: transparent;
}

.md-input.md-input--disabled:focus-visible,
.md-input.md-input--readonly:focus-visible {
  outline: 0;
  cursor: default;
}

.md-input.md-input--disabled {
  background-color: var(--md-color-disabled-bg);
}

.md-input.md-input--readonly:not(.md-input.md-input--disabled) {
  background-color: transparent;
  border: 0;
  border-bottom: var(--md-size-1) solid var(--md-color-border-primary);
}

.md-input.md-input--error {
  border-color: var(--md-color-attention-error-primary);
}

.md-input.md-input--has-suffix {
  padding-right: var(--md-size-8);
}

.md-input.md-input--has-prefix {
  padding-left: 2.8rem;
}

.md-input__wrapper {
  position: relative;
}

.md-input__label-wrapper {
  margin-bottom: var(--md-size-8);
}

.md-input__label {
  display: flex;
  align-items: flex-end;
  font-weight: var(--md-typography-font-weight-medium);
}

.md-input__label > * + * {
  margin-left: var(--md-size-16);
}

.md-input__help-button {
  display: flex;
  flex-grow: 1;
}

.md-input__error {
  color: var(--md-color-attention-error-primary);
  font-size: 0.88rem;
  margin-top: var(--md-size-8);
}

.md-input__support-text {
  color: var(--md-color-text-primary);
  font-size: 0.88rem;
  margin-top: var(--md-size-8);
}

.md-input__help-text {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.15s ease-out;
}

.md-input__help-text--open {
  padding-top: 0.5rem;
  max-height: 2000px;
  transition: max-height 0.5s ease-in;
}

.md-input__prefix {
  position: absolute;
  top: var(--md-size-16);
  left: var(--md-size-16);
  height: var(--md-size-20);
  width: var(--md-size-20);
  display: flex;
  color: var(--md-color-text-secondary);
}

.md-input__prefix.md-input__prefix--disabled {
  color: var(--mdGreyColor60);
}

.md-input__wrapper.md-input__wrapper--small .md-input__prefix {
  top: 0.7rem;
}
.md-input__wrapper.md-input__wrapper--large .md-input__prefix {
  top: 1.2rem;
}

.md-input__suffix {
  position: absolute;
  top: 0.9rem;
  right: var(--md-size-16);
  display: flex;
}

.md-input__suffix > * + * {
  margin-left: var(--md-size-8);
}

.md-input__error-icon {
  width: var(--md-size-20);
  height: var(--md-size-20);
  margin-left: var(--md-size-8);
  color: var(--md-color-attention-error-primary);
}

.md-input__wrapper.md-input__wrapper--small .md-input__suffix {
  top: 0.6rem;
}
.md-input__wrapper.md-input__wrapper--large .md-input__suffix {
  top: 1.1rem;
}

.md-input__wrapper.md-input__wrapper--small .md-input__suffix > * + * {
  margin-left: 0.3rem;
}

.md-input::placeholder {
  color: var(--md-color-text-disabled);
  font-family: var(--md-typography-family-body);
}

/* Hacks for hiding arrows if type=number */
.md-input.md-input--hide-number-arrows[type='number'],
.md-input.md-input--hide-number-arrows::-webkit-outer-spin-button,
.md-input.md-input--hide-number-arrows::-webkit-inner-spin-button {
  appearance: none;
  -webkit-appearance: none;
  margin: var(--md-size-1);
  -moz-appearance: textfield;
}

